--- a/Blood App/app/src/main/res/layout/fragment_request.xml
+++ b/Blood App/app/src/main/res/layout/fragment_request.xml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.RequestFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_location_next"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="40dp"
+        android:alpha="1"
+        android:background="@color/red_500"
+        android:fontFamily="@font/poppinsmedium"
+        android:gravity="center"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:text="NEXT"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/poppinssemibold"
-            android:text="Emergency Blood Request"
-            android:textColor="@color/red_500"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/poppinsmedium"
+        android:text="Emergency Blood Request"
+        android:textColor="@color/red_500"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView2"
@@ -32,129 +48,150 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppinsregular"
-            android:text="Select Your Blood Group"
+            android:text="Select Blood Type"
             android:textColor="@color/Text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
-        <GridLayout
-            android:id="@+id/gridLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:columnCount="4"
-            android:rowCount="2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2">
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        android:weightSum="4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-            <Button
-                android:id="@+id/button1"
-                android:layout_row="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="5sp"
-                android:background="@drawable/primary_outline_textbox"
-                android:fontFamily="@font/poppinsregular"
-                android:text="A+"
-                android:textColor="@color/Text"></Button>
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_row="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="5sp"
-                android:background="@drawable/primary_outline_textbox"
-                android:fontFamily="@font/poppinsregular"
-                android:text="AB+"
-                android:textColor="@color/Text"></Button>
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_row="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="5sp"
-                android:background="@drawable/primary_outline_textbox"
-                android:fontFamily="@font/poppinsregular"
-                android:text="A-"
-                android:textColor="@color/Text"></Button>
-
-            <Button
-                android:id="@+id/button4"
-                android:layout_row="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="5sp"
-                android:background="@drawable/primary_outline_textbox"
-                android:fontFamily="@font/poppinsregular"
-                android:text="AB-"
-                android:textColor="@color/Text"></Button>
-
-            <Button
-                android:id="@+id/button5"
-                android:layout_row="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="5sp"
-                android:background="@drawable/primary_outline_textbox"
-                android:fontFamily="@font/poppinsregular"
-                android:text="B+"
-                android:textColor="@color/Text"></Button>
-
-            <Button
-                android:id="@+id/button6"
-                android:layout_row="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="5sp"
-                android:background="@drawable/primary_outline_textbox"
-                android:fontFamily="@font/poppinsregular"
-                android:text="B-"
-                android:textColor="@color/Text"></Button>
-
-            <Button
-                android:id="@+id/button7"
-                android:layout_row="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="5sp"
-                android:background="@drawable/primary_outline_textbox"
-                android:fontFamily="@font/poppinsregular"
-                android:text="O+"
-                android:textColor="@color/Text"></Button>
-
-            <Button
-                android:id="@+id/button8"
-                android:layout_row="1"
-                android:layout_columnWeight="1"
-                android:layout_gravity="fill"
-                android:layout_margin="5sp"
-                android:background="@drawable/primary_outline_textbox"
-                android:fontFamily="@font/poppinsregular"
-                android:text="O-"
-                android:textColor="@color/Text"></Button>
-
-
-        </GridLayout>
-
-
-        <TextView
-            android:id="@+id/textView4"
+        <Button
+            android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:layout_weight="1"
+            android:background="@drawable/primary_grey_filled"
             android:fontFamily="@font/poppinsregular"
-            android:text="How many units needed"
-            android:textColor="@color/Text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+            android:text="A+"
+            android:textColor="@color/Text" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:layout_weight="1"
+            android:background="@drawable/primary_grey_filled"
+            android:fontFamily="@font/poppinsregular"
+            android:text="A-"
+            android:textColor="@color/Text" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:layout_weight="1"
+            android:background="@drawable/primary_grey_filled"
+            android:fontFamily="@font/poppinsregular"
+            android:text="AB+"
+            android:textColor="@color/Text" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:layout_weight="1"
+            android:background="@drawable/primary_grey_filled"
+            android:fontFamily="@font/poppinsregular"
+            android:text="AB-"
+            android:textColor="@color/Text" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:layout_weight="1"
+            android:background="@drawable/primary_grey_filled"
+            android:fontFamily="@font/poppinsregular"
+            android:text="O+"
+            android:textColor="@color/Text" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:layout_weight="1"
+            android:background="@drawable/primary_grey_filled"
+            android:fontFamily="@font/poppinsregular"
+            android:text="B-"
+            android:textColor="@color/Text" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:layout_weight="1"
+            android:background="@drawable/primary_grey_filled"
+            android:fontFamily="@font/poppinsregular"
+            android:text="B+"
+            android:textColor="@color/Text" />
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="5sp"
+            android:layout_weight="1"
+            android:background="@drawable/primary_grey_filled"
+            android:fontFamily="@font/poppinsregular"
+            android:text="O-"
+            android:textColor="@color/Text" />
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/poppinsregular"
+        android:text="How many units needed"
+        android:textColor="@color/Text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
         <EditText
             android:id="@+id/EditQuantity"
@@ -163,9 +200,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/primary_outline_textbox"
+            android:background="@drawable/primary_grey_outline"
             android:drawablePadding="8dp"
             android:fontFamily="@font/poppinsregular"
+            android:hint="20"
             android:inputType="number"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
@@ -179,48 +217,43 @@
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/poppinsregular"
-            android:text="Hospital Location and name"
+            android:text="Additional Information (optional)"
             android:textColor="@color/Text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/EditQuantity" />
 
         <EditText
-            android:id="@+id/EditLocation"
-            android:layout_width="match_parent"
+            android:id="@+id/edit_information"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/primary_outline_textbox"
+            android:background="@drawable/primary_grey_outline"
             android:drawablePadding="8dp"
             android:fontFamily="@font/poppinsregular"
-            android:inputType="number"
+            android:gravity="start"
+            android:hint="Any information that we should consider"
+            android:inputType="textMultiLine"
+            android:lines="3"
+            android:nestedScrollingEnabled="true"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
             android:paddingBottom="12dp"
+            android:singleLine="false"
             android:textColor="@color/Text"
             android:textColorHint="@color/hint"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
 
-
-
-
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
