--- a/Blood App/app/src/main/res/layout/activity_admin.xml
+++ b/Blood App/app/src/main/res/layout/activity_admin.xml
@@ -58,6 +58,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ScheduleRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
