--- a/Blood App/app/src/main/res/layout/activity_admin.xml
+++ b/Blood App/app/src/main/res/layout/activity_admin.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView22">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonPending"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -45,7 +45,7 @@
             android:text="Pending" />
 
         <Button
-            android:id="@+id/button9"
+            android:id="@+id/buttonApproved"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
