--- a/Blood App/app/src/main/res/layout/fragment_home.xml
+++ b/Blood App/app/src/main/res/layout/fragment_home.xml
@@ -6,75 +6,80 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <TextView
-        android:id="@+id/textView19"
+    <ImageView
+        android:id="@+id/imageView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/poppinsregular"
-        android:text="Welcome to Hemo"
-        android:textColor="@color/Text"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:background="@color/background"
-        app:cardCornerRadius="8dp"
+        android:layout_marginTop="24dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_heart_beat"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19">
-
-        <ImageView
-            android:id="@+id/CampaignBanner"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:background="@color/background"
-            android:src="@drawable/email_vector" />
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="32dp"
+        android:background="@drawable/home_bottom_curved_background"
         android:orientation="vertical"
-        android:layout_marginEnd="12dp"
+        android:paddingTop="64dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/imageView9">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/donate_blood"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="32dp"
+            app:cardBackgroundColor="@color/GreyPrimary"
+            app:cardCornerRadius="8dp">
+
+            <TextView
+                android:id="@+id/textView28"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_baseline_send_24"
+                android:fontFamily="@font/poppinsmedium"
+                android:padding="16dp"
+                android:text="You can donate blood"
+                android:textColor="@color/Text"
+                android:textSize="16sp" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:id="@+id/HomemakeRequest"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="12dp"
-            android:background="@drawable/primary_outline_textbox"
+            android:background="@drawable/primary_color_filled"
             android:orientation="horizontal"
-            android:padding="12dp">
+            android:paddingStart="12dp"
+            android:paddingTop="16dp"
+            android:paddingEnd="12dp"
+            android:paddingBottom="16dp">
 
             <ImageView
                 android:id="@+id/imageViewMakeRequest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_content_paste_24" />
+                android:src="@drawable/ic_baseline_content_paste_24"
+                app:tint="@color/white" />
 
             <TextView
                 android:id="@+id/textViewMakeRequest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsregular"
-                android:layout_marginStart="12dp"
                 android:text="Make a Request"
-                android:textColor="@color/Text"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -82,26 +87,33 @@
             android:id="@+id/NewAppontment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="12dp"
-            android:background="@drawable/primary_outline_textbox"
+            android:background="@drawable/primary_color_filled"
             android:orientation="horizontal"
-            android:padding="12dp">
+            android:paddingStart="12dp"
+            android:paddingTop="16dp"
+            android:paddingEnd="12dp"
+            android:paddingBottom="16dp">
 
             <ImageView
                 android:id="@+id/imageViewNewAppointment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_assignment_turned_in_24" />
+                android:src="@drawable/ic_baseline_assignment_turned_in_24"
+                app:tint="@color/white"
+                android:tintMode="@color/white" />
 
             <TextView
                 android:id="@+id/textViewNewAppointment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsregular"
-                android:layout_marginStart="12dp"
                 android:text="Schedule New Appointment"
-                android:textColor="@color/Text"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -109,57 +121,63 @@
             android:id="@+id/BloodBankFind"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="12dp"
-            android:background="@drawable/primary_outline_textbox"
+            android:background="@drawable/primary_color_filled"
             android:orientation="horizontal"
-            android:padding="12dp">
+            android:paddingStart="12dp"
+            android:paddingTop="16dp"
+            android:paddingEnd="12dp"
+            android:paddingBottom="16dp">
 
             <ImageView
                 android:id="@+id/imageViewBloodBankFind"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_map_24" />
+                android:src="@drawable/ic_baseline_map_24"
+                app:tint="@color/white" />
 
             <TextView
                 android:id="@+id/textViewBloodBankFind"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsregular"
-                android:layout_marginStart="12dp"
                 android:text="Find Blood Bank"
-                android:textColor="@color/Text"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/eligiblityText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="12dp"
-            android:background="@drawable/primary_outline_textbox"
-            android:orientation="horizontal"
-            android:padding="12dp">
-
-            <ImageView
-                android:id="@+id/imageViewEligiblityText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_outline_info_24" />
-
-            <TextView
-                android:id="@+id/textViewEligiblityText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/poppinsregular"
-                android:layout_marginStart="12dp"
-                android:text="Test your Eligibility"
-                android:textColor="@color/Text"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        android:fontFamily="@font/poppinsmedium"
+        android:text="Welcome Home"
+        android:textColor="@color/Text"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/poppinsmedium"
+        android:text="Anant Shukla"
+        android:textColor="@color/Text"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
