--- a/Blood App/app/src/main/res/layout/dialog_blood_requested.xml
+++ b/Blood App/app/src/main/res/layout/dialog_blood_requested.xml
@@ -35,4 +35,20 @@
         android:gravity="center_horizontal"
         />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/go_to_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/red_500"
+        android:fontFamily="@font/poppinsmedium"
+        android:gravity="center_horizontal"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:text="Go to home"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
+
 </LinearLayout>
