--- a/Blood App/app/src/main/res/layout/dialog_error_404.xml
+++ b/Blood App/app/src/main/res/layout/dialog_error_404.xml
@@ -15,5 +15,21 @@
         android:src="@drawable/ic_error_01_01"></ImageView>
 
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/go_to_home1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:background="@color/red_500"
+        android:fontFamily="@font/poppinsmedium"
+        android:gravity="center_horizontal"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:text="Go to home"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
+
+
 
 </LinearLayout>
